--- a/404.html
+++ b/404.html
@@ -1,5 +1,27 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>PyCM</title>
-<meta http-equiv="refresh" content="0; URL=https://www.pycm.io/">
-<link rel="canonical" href="https://www.pycm.io/">
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>PyCM</title>
+
+    <script>
+        window.onload = function () {
+            const destination = window.location.href;
+            if (window.location.href.includes("pycm.ir")) {
+                const redirectLocation = window.location.href.replace(
+                    "pycm.ir",
+                    "pycm.io"
+                );
+                document.getElementById("body").innerHTML = "PyCM website has moved to pycm.io!<br/><br/>Redirecting to " + redirectLocation + " ...";
+                window.location.href = redirectLocation;
+            }
+        }
+    </script>
+</head>
+
+<body id="body" style="text-align: center">
+    Page not found
+</body>
+
+</html>
