minor edit in redirection

--- a/404.html
+++ b/404.html
@@ -7,7 +7,6 @@
 
     <script>
         window.onload = function () {
-            const destination = window.location.href;
             if (window.location.href.includes("pycm.ir")) {
                 const redirectLocation = window.location.href.replace(
                     "pycm.ir",
@@ -21,7 +20,7 @@
 </head>
 
 <body id="body" style="text-align: center">
-    Page not found
+    PyCM website has moved to pycm.io!
 </body>
 
 </html>
