--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>PyCM</title>
-<meta http-equiv="refresh" content="0; URL=https://www.pycm.io/">
-<link rel="canonical" href="https://www.pycm.io/">
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>PyCM</title>
+
+    <script>
+        window.onload = function () {
+            document.getElementById("body").innerHTML = "PyCM website has moved to pycm.io!<br/><br/>Redirecting to " + redirectLocation + " ...";
+            window.location.href = "https://www.pycm.io";
+        }
+    </script>
+</head>
+
+<body id="body" style="text-align: center">
+    PyCM website has moved to pycm.io!
+</body>
+
+</html>
