minor bug in index.html fixed

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
     <script>
         window.onload = function () {
+            const redirectLocation = "https://www.pycm.io";
             document.getElementById("body").innerHTML = "PyCM website has moved to pycm.io!<br/><br/>Redirecting to " + redirectLocation + " ...";
-            window.location.href = "https://www.pycm.io";
+            window.location.href = redirectLocation;
         }
     </script>
 </head>
