minor edit in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script>
         window.onload = function () {
             const redirectLocation = "https://www.pycm.io";
-            document.getElementById("body").innerHTML = "PyCM website has moved to pycm.io!<br/><br/>Redirecting to " + redirectLocation + " ...";
+            document.getElementById("body").innerHTML = "PyCM website has moved to pycm.io!<br/><br/>Redirecting ...";
             window.location.href = redirectLocation;
         }
     </script>
