missed files added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="PyCM(Python confusion matrix) is a multi-class confusion matrix library in Python."/>
+    <meta property="og:title" content="PyCM" />
+    <meta property="og:site_name" content="http://www.pycm.ir"/>
+    <meta property="og:description" content="PyCM(Python confusion matrix) is a multi-class confusion matrix library in Python." />
+    <meta property="og:image" content="http://www.pycm.ir/images/logo-og.png" />
+    <meta name="twitter:image:src" content="http://www.pycm.ir/images/logo-og.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PyCM" />
+    <meta name="twitter:description" content="PyCM(Python confusion matrix) is a multi-class confusion matrix library in Python." />
+    <link href="images/favicon/4.png" rel="shortcut icon">
+    <link href="images/favicon/1.png" rel="-touch-icon">
+    <link href="images/favicon/2.png" rel="apple-touch-icon" sizes="72x72">
+    <link href="images/favicon/3.png" rel="apple-touch-icon" sizes="144x144">
     <title>PyCM</title>
-
     <script>
         window.onload = function () {
             const redirectLocation = "https://www.pycm.io";
